--- a/foto-adjust.htm
+++ b/foto-adjust.htm
@@ -89,6 +89,16 @@
                         <!-- <h3 class="subtitle"><span>匯入總筆數<b>20</b>筆，成功筆數<b>16</b>筆，異常筆數<b>4</b>筆</span></h3> -->
                         <!-- Start -->
                         <section class="">
+                            <!-- 202307 新增申請人 -->
+                            <div class="applicant">
+                                申請人 1<b>張大毛</b>
+                            </div>
+                            <!-- 202307 填表步驟 -->
+                            <div class="fill_steps">
+                                <a href="#"><b>1</b>簡表資料</a>
+                                <a href="#"><b>2</b>辦理方式</a>
+                                <a href="#" class="active"><b>3</b>上傳照片</a>
+                            </div>
                             <!-- 說明事項 -->
                             <div class="caption">
                                 <h3 class="title"><span>說明事項</span></h3>
