--- a/index.htm
+++ b/index.htm
@@ -230,6 +230,11 @@
                         <td>變更辦理方式</td>
                         <td><a href="p_sp3.html" target="_blank"></a></td>
                     </tr>
+                    <tr>
+                        <td></td>
+                        <td>網路填表儀表板 20230725</td>
+                        <td><a href="p_sp5.html" target="_blank"></a></td>
+                    </tr>
                     <!-- <tr>
                         <td></td>
                         <td>...</td>
