--- a/p_login.htm
+++ b/p_login.htm
@@ -62,7 +62,11 @@
                         </div>
                         <!-- 憑證PIN碼 -->
                         <div class="pin_panel">
-                            <button type="button" class="btn btn-submit">我要申辦護照</button>
+                            <button type="button" class="btn btn-submit">我要預約</button>
+                            <div class="btn_grp form_inline">
+                                <button type="button" class="btn btn-normal_P">查詢預約人數</button>
+                                <button type="button" class="btn btn-normal_P">我要修改預約資料</button>
+                            </div>
                         </div>
                         <!-- 說明事項 -->
                         <div class="tips">
