--- a/p_sp4.html
+++ b/p_sp4.html
@@ -126,6 +126,21 @@
                                 <div class="flex-form form-column">
                                     <div class="form_grp">
                                         <div class="flex-col-equal-1">
+                                            <label for="" class="form_title" aria-required="true"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>預約人數：</label>
+                                            <div class="form_content">
+                                                <select name="" id="">
+                                                    <option value="">1</option>
+                                                    <option value="">2</option>
+                                                    <option value="">3</option>
+                                                    <option value="">4</option>
+                                                </select>
+                                            </div>
+                                            <div class="notice_info">提醒文字</div>
+                                        </div>
+                                    </div>
+                                <div class="flex-form form-column">
+                                    <div class="form_grp">
+                                        <div class="flex-col-equal-1">
                                             <label for="" class="form_title" aria-required="true"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>送件地點：</label>
                                             <div class="form_content">
                                                 <div class="btn_grp equal-3">
@@ -286,6 +301,136 @@
                                         </div>
                                     </div>
 
+                                    <!-- 預約時段 readonly -->
+                                    <div class="time_reserve readonly">
+                                        <!-- <div class="info">
+                                            <h3>預約日期及時段：</h3>
+                                            <ol>
+                                                <li>提供未來10個工作天不同時段的預約，請務必依預約日期及時段至現場辦理。</li>
+                                                <li>若無符合預約時段或選擇臨櫃紙本送件，請點選不預約僅填表。</li>
+                                                <li>網路填表的資料及數位照片檔，同一申請案每日以變更3次為限，僅保留最後一次上傳的資料，並請於上傳次日起10個工作天內至領務局或外交部中部、雲嘉南、南部、東部辦事處申請護照，否則資料將自動刪除。</li>
+                                            </ol>
+                                        </div>
+                                        <div class="date">
+                                            <h3>選擇日期</h3>
+                                            <div class="part">
+                                                <div class="col">
+                                                    <time>10/15</time>
+                                                    <span>(五)</span>
+                                                </div>
+                                                <div class="col act">
+                                                    <time>10/16</time>
+                                                    <span>(六)</span>
+                                                </div>
+                                                <div class="col">
+                                                    <time>10/17</time>
+                                                    <span>(日)</span>
+                                                </div>
+                                                <div class="col">
+                                                    <time>10/18</time>
+                                                    <span>(一)</span>
+                                                </div>
+                                                <div class="col">
+                                                    <time>10/19</time>
+                                                    <span>(二)</span>
+                                                </div>
+                                                <div class="col">
+                                                    <time>10/20</time>
+                                                    <span>(三)</span>
+                                                </div>
+                                                <div class="col">
+                                                    <time>10/21</time>
+                                                    <span>(四)</span>
+                                                </div>
+                                                <div class="col">
+                                                    <time>10/22</time>
+                                                    <span>(五)</span>
+                                                </div>
+                                                <div class="col">
+                                                    <time>10/23</time>
+                                                    <span>(六)</span>
+                                                </div>
+                                                <div class="col">
+                                                    <time>10/24</time>
+                                                    <span>(日)</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="btn btn-pre">上一則</button>
+                                            <button type="button" class="btn btn-next">下一則</button>
+                                        </div> -->
+                                        <div class="time_period">
+                                            <div class="AM">
+                                                <h3>上午時段</h3>
+                                                <div class="part">
+                                                    <div class="col">
+                                                        <time>08:30</time>
+                                                        <span>餘<b>18</b>人</span>
+                                                    </div>
+                                                    <div class="col">
+                                                        <time>09:00</time>
+                                                        <span>餘<b>18</b>人</span>
+                                                    </div>
+                                                    <div class="col">
+                                                        <time>09:30</time>
+                                                        <span><b>已預約</b></span>
+                                                    </div>
+                                                    <div class="col full">
+                                                        <time>10:00</time>
+                                                        <span><b>已額滿</b></span>
+                                                    </div>
+                                                    <div class="col">
+                                                        <time>10:30</time>
+                                                        <span>餘<b>18</b>人</span>
+                                                    </div>
+                                                    <div class="col">
+                                                        <time>11:00</time>
+                                                        <span>餘<b>18</b>人</span>
+                                                    </div>
+                                                    <div class="col">
+                                                        <time>11:30</time>
+                                                        <span>餘<b>18</b>人</span>
+                                                    </div>
+                                                    <div class="col">
+                                                        <time>12:00</time>
+                                                        <span>餘<b>18</b>人</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="PM">
+                                                <h3>下午時段</h3>
+                                                <div class="part">
+                                                    <div class="col">
+                                                        <time>13:30</time>
+                                                        <span>餘<b>18</b>人</span>
+                                                    </div>
+                                                    <div class="col">
+                                                        <time>14:00</time>
+                                                        <span>餘<b>18</b>人</span>
+                                                    </div>
+                                                    <div class="col">
+                                                        <time>14:30</time>
+                                                        <span>餘<b>18</b>人</span>
+                                                    </div>
+                                                    <div class="col">
+                                                        <time>15:00</time>
+                                                        <span>餘<b>18</b>人</span>
+                                                    </div>
+                                                    <div class="col">
+                                                        <time>15:30</time>
+                                                        <span>餘<b>18</b>人</span>
+                                                    </div>
+                                                    <div class="col">
+                                                        <time>16:00</time>
+                                                        <span>餘<b>18</b>人</span>
+                                                    </div>
+                                                    <div class="col">
+                                                        <time>16:30</time>
+                                                        <span>餘<b>18</b>人</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </form>
                         </section>
