lp 新增預覽頁面

--- a/lp.htm
+++ b/lp.htm
@@ -17,6 +17,7 @@
     <!-- 燈箱facybox -->
     <link rel="stylesheet" type="text/css" href="vendor/facybox/dist/jquery.fancybox.min.css">
     <!-- CSS -->
+    <!-- <link rel="stylesheet" href="css/boca.css"> -->
     <link rel="stylesheet" href="css/boca_personal.css">
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
@@ -290,6 +291,158 @@
                                         </section>
                                     </div>
                                 </div>
+
+                                <!-- 申請人 -->
+                                <b class="applicant">申請人 1</b>
+                                <div class="grp cardInfo">
+                                    <div class="content">
+                                        <section class="flex-col-equal-2">
+                                            <div class="grp foto">
+                                                <img src="images/foto-pass.jpg" alt="張大毛">
+                                            </div>
+                                            <div class="grp">
+                                                <div class="grp">
+                                                    <div class="title"><span>申辦護照類別：</span></div>
+                                                    <div class="content">...</div>
+                                                </div>
+                                                <div class="grp">
+                                                    <div class="title"><span>中文姓名：</span></div>
+                                                    <div class="content">...</div>
+                                                </div>
+                                                <div class="grp">
+                                                    <div class="title"><span>身分證字號：</span></div>
+                                                    <div class="content">...</div>
+                                                </div>
+                                                <div class="grp">
+                                                    <div class="title"><span>出生日期：</span></div>
+                                                    <div class="content">...</div>
+                                                </div>
+                                            </div>
+                                            <div class="grp">
+                                                <div class="title"><span>外文姓名：</span></div>
+                                                <div class="content">...</div>
+                                            </div>
+                                            <div class="grp">
+                                                <div class="title"><span>外文別名：</span></div>
+                                                <div class="content">...</div>
+                                            </div>
+                                            <div class="grp">
+                                                <div class="title"><span>辦理方式：</span></div>
+                                                <div class="content">...</div>
+                                            </div>
+                                            <div class="grp">
+                                                <div class="title"><span>陪同人員：</span></div>
+                                                <div class="content">...</div>
+                                            </div>
+                                        </section>
+                                        <section class="flex-col-equal-1">
+                                            <div class="grp">
+                                                <div class="title"><span>電子郵件：</span></div>
+                                                <div class="content">...</div>
+                                            </div>
+                                            <div class="grp">
+                                                <div class="title"><span>緊急聯絡人資料：</span></div>
+                                                <div class="content">
+                                                    <section class="flex-col-equal-2">
+                                                        <div class="grp">
+                                                            <div class="title"><span>緊急聯絡人姓名</span></div>
+                                                            <div class="content">王大明</div>
+                                                        </div>
+                                                        <div class="grp">
+                                                            <div class="title"><span>與緊急聯絡人之關係</span></div>
+                                                            <div class="content">父子</div>
+                                                        </div>
+                                                        <div class="grp">
+                                                            <div class="title"><span>緊急聯絡人聯絡電話</span></div>
+                                                            <div class="content">02-23456789#123</div>
+                                                        </div>
+                                                        <div class="grp">
+                                                            <div class="title"><span>緊急聯絡人手機號碼</span></div>
+                                                            <div class="content">0912345678</div>
+                                                        </div>
+                                                    </section>
+                                                </div>
+                                            </div>
+                                        </section>
+                                    </div>
+                                </div>
+
+                                <b class="applicant">申請人 2</b>
+                                <div class="grp cardInfo">
+                                    <div class="content">
+                                        <section class="flex-col-equal-2">
+                                            <div class="grp foto">
+                                                <span>現場繳交照片</span>
+                                                <img src="images/foto-defailt.jpg" alt="預設大頭照">
+                                            </div>
+                                            <div class="grp">
+                                                <div class="grp">
+                                                    <div class="title"><span>申辦護照類別：</span></div>
+                                                    <div class="content">...</div>
+                                                </div>
+                                                <div class="grp">
+                                                    <div class="title"><span>中文姓名：</span></div>
+                                                    <div class="content">...</div>
+                                                </div>
+                                                <div class="grp">
+                                                    <div class="title"><span>身分證字號：</span></div>
+                                                    <div class="content">...</div>
+                                                </div>
+                                                <div class="grp">
+                                                    <div class="title"><span>出生日期：</span></div>
+                                                    <div class="content">...</div>
+                                                </div>
+                                            </div>
+                                            <div class="grp">
+                                                <div class="title"><span>外文姓名：</span></div>
+                                                <div class="content">...</div>
+                                            </div>
+                                            <div class="grp">
+                                                <div class="title"><span>外文別名：</span></div>
+                                                <div class="content">...</div>
+                                            </div>
+                                            <div class="grp">
+                                                <div class="title"><span>辦理方式：</span></div>
+                                                <div class="content">...</div>
+                                            </div>
+                                            <div class="grp">
+                                                <div class="title"><span>陪同人員：</span></div>
+                                                <div class="content">...</div>
+                                            </div>
+                                        </section>
+                                        <section class="flex-col-equal-1">
+                                            <div class="grp">
+                                                <div class="title"><span>電子郵件：</span></div>
+                                                <div class="content">...</div>
+                                            </div>
+                                            <div class="grp">
+                                                <div class="title"><span>緊急聯絡人資料：</span></div>
+                                                <div class="content">
+                                                    <section class="flex-col-equal-2">
+                                                        <div class="grp">
+                                                            <div class="title"><span>緊急聯絡人姓名</span></div>
+                                                            <div class="content">王大明</div>
+                                                        </div>
+                                                        <div class="grp">
+                                                            <div class="title"><span>與緊急聯絡人之關係</span></div>
+                                                            <div class="content">父子</div>
+                                                        </div>
+                                                        <div class="grp">
+                                                            <div class="title"><span>緊急聯絡人聯絡電話</span></div>
+                                                            <div class="content">02-23456789#123</div>
+                                                        </div>
+                                                        <div class="grp">
+                                                            <div class="title"><span>緊急聯絡人手機號碼</span></div>
+                                                            <div class="content">0912345678</div>
+                                                        </div>
+                                                    </section>
+                                                </div>
+                                            </div>
+                                        </section>
+                                    </div>
+                                </div>
+                                <b class="applicant">申請人 3</b>
+                                <b class="applicant">申請人 4</b>
                             </div>
                             <!-- 按鈕 -->
                             <div class="btn_grp">
