--- a/p_sp5.html
+++ b/p_sp5.html
@@ -17,6 +17,7 @@
     <!-- 燈箱facybox -->
     <link rel="stylesheet" type="text/css" href="vendor/facybox/dist/jquery.fancybox.min.css">
     <!-- CSS -->
+    <!-- <link rel="stylesheet" href="css/boca.css"> -->
     <link rel="stylesheet" href="css/boca_personal.css">
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
@@ -122,21 +123,6 @@
                         </div>
                         <!-- Start -->
                         <section class="">
-                            <!-- 202307 新增申請人 -->
-                            <div class="applicant">
-                                申請人 1<b>張大毛</b>
-                            </div>
-                            <!-- 202307 填表步驟 -->
-                            <div class="fill_steps">
-                                <a href="#" class="active"><b>1</b>簡表資料</a>
-                                <a href="#"><b>2</b>辦理方式</a>
-                                <a href="#"><b>3</b>上傳照片</a>
-                            </div>
-                            <!-- 按鈕 -->
-                            <div class="btn_grp">
-                                <button type="button" class="btn btn-secondary">回到填表儀表板</button>
-                                <button type="button" class="btn btn-primary">儲存本頁，下一步：辦理方式</button>
-                            </div>
                             <!-- 儀表板 -->
                             <p class="note">目前預約人數設定為<b class="R">4</b>筆申請人，請依序填寫申請人資料與上傳照片</p>
                             <div class="btn_grp">
