--- a/form.htm
+++ b/form.htm
@@ -17,7 +17,9 @@
     <!-- 燈箱facybox -->
     <link rel="stylesheet" type="text/css" href="vendor/facybox/dist/jquery.fancybox.min.css">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/boca.css">
+    <!-- <link rel="stylesheet" href="css/boca.css"> -->
+    <link rel="stylesheet" href="css/boca_personal.css">
+    <!-- <link rel="stylesheet" href="css/boca_personal.css"> -->
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
 </head>
@@ -251,14 +253,14 @@
                                         <label for="email" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>電子郵件</label>
                                         <div class="form_content form_inline">
                                             <input name="email" type="email" id="email" placeholder="請輸入e-mail">
-                                            <button type="button" class="btn btn-primary">編修</button>
+                                            <button type="button" class="btn btn-normal">編修</button>
                                         </div>
                                     </div>
                                     <div class="form_grp">
                                         <label for="email" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>電子郵件</label>
                                         <div class="form_content form_inline">
                                             <input name="email" type="email" id="email" placeholder="請輸入e-mail" value="123@gmail.com" disabled>
-                                            <button type="button" class="btn btn-primary">編修</button>
+                                            <button type="button" class="btn btn-normal">編修</button>
                                         </div>
                                     </div>
                                     <div class="form_grp">
@@ -1099,6 +1101,7 @@
                                         <button class="btn btn-submit">送出</button>
                                         <button type="button" class="btn btn-primary">主要按鈕</button>
                                         <button type="button" class="btn btn-secondary">次要按鈕</button>
+                                        <button type="button" class="btn btn-secondary2">次要按鈕2</button>
                                         <button type="button" class="btn btn-normal">一般按鈕</button>
                                         <button type="button" id="openModal" class="btn btn-primary">跳窗</button>
                                     </div>
@@ -1107,6 +1110,7 @@
                                         <button class="btn btn-submit">送出</button>
                                         <button type="button" class="btn btn-primary">主要按鈕</button>
                                         <button type="button" class="btn btn-secondary">次要按鈕</button>
+                                        <button type="button" class="btn btn-secondary2">次要按鈕2</button>
                                         <button type="button" class="btn btn-normal">一般按鈕</button>
                                     </div>
                                 </div>
