2023-0802 調整欄位、清除compass

--- a/form.htm
+++ b/form.htm
@@ -264,6 +264,12 @@
                                         </div>
                                     </div>
                                     <div class="form_grp">
+                                        <label for="email" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>電子郵件</label>
+                                        <div class="form_content">
+                                            <input name="email" type="email" id="email" placeholder="請輸入e-mail" value="readonly@hyweb.com.tw" readonly>
+                                        </div>
+                                    </div>
+                                    <div class="form_grp">
                                         <div class="flex-col-equal-2">
                                             <div class="form_grp">
                                                 <label for="" class="form_title" aria-required="true"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>input 2-1：</label>
