--- a/lp.htm
+++ b/lp.htm
@@ -356,6 +356,10 @@
                                                 </div>
                                             </div>
                                             <div class="grp">
+                                                <div class="title"><span>地址：</span></div>
+                                                <div class="content">...</div>
+                                            </div>
+                                            <div class="grp">
                                                 <div class="title"><span>緊急聯絡人資料：</span></div>
                                                 <div class="content">
                                                     <section class="flex-col-equal-2">
@@ -428,6 +432,25 @@
                                         <section class="flex-col-equal-1">
                                             <div class="grp">
                                                 <div class="title"><span>電子郵件：</span></div>
+                                                <div class="content">readonly@hyweb.com.tw</div>
+                                            </div>
+                                            <div class="grp">
+                                                <div class="title"><span>聯絡方式：</span></div>
+                                                <div class="content">
+                                                    <section class="flex-col-equal-2">
+                                                        <div class="grp">
+                                                            <div class="title"><span>手機</span></div>
+                                                            <div class="content">0912345678</div>
+                                                        </div>
+                                                        <div class="grp">
+                                                            <div class="title"><span>家用電話</span></div>
+                                                            <div class="content">02-23456789#123</div>
+                                                        </div>
+                                                    </section>
+                                                </div>
+                                            </div>
+                                            <div class="grp">
+                                                <div class="title"><span>地址：</span></div>
                                                 <div class="content">...</div>
                                             </div>
                                             <div class="grp">
